# SentinelBio-Website

./: .SETUP.md.swp  .gitignore  README.md  SETUP.md  remote.dump
backend/: pyproject.toml
backend/app/: access.py  auth.py  config.py  job_log.py  job_worker.py  jobs.py  main.py  rate_limit.py  supabase_client.py  tool_worker.py  tree_layout.py  worker.py
backend/app/app/routes/: files.py
backend/app/app/tools/: hyphy_selection.py  registry.py
backend/app/files/: store.py
backend/app/routes/: admin.py  files.py  members.py  projects.py  species.py  tools.py
backend/app/sources/: enrich.py  fastqc.py  inaturalist.py  ncbi.py  rcsb.py  wikimedia.py  wikipedia.py
backend/app/tools/: _REGISTRY_PATCH.py  _inputs.py  _naming.py  _subprocess.py  alphafold_fetch.py  annotate_gene.py  annotate_gene_liftoff.py  annotate_gene_miniprot.py  blast.py  cancer_hotspots.py  colabfold_run.py  cutadapt.py  domain_diversity.py  family_gene_pipeline.py  fastqc.py  iqtree.py  mafft.py  mhcxgraph.py  ncbi_fetch.py  popstats.py  region_extract.py  registry.py  struct_align.py  translate_dna.py  usalign.py
frontend/: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
frontend/src/: app.html  hooks.server.ts
frontend/src/lib/: AlignmentViewer.svelte  AssemblyPicker.svelte  BlastReport.svelte  ConservationPanel.svelte  Dialog.svelte  FastaMultiPicker.svelte  FastqcReport.svelte  GeneFetchDialog.svelte  api.ts  (+28 more)
patch/: APPLY_NOTES_blast_and_structure.md
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20260603_tool_run_logs.sql
(+36 files in other folders)
