[project]
name = "sentinel-bio-backend"
version = "0.1.0"
description = "Sentinel Bio backend — FastAPI"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.27.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "supabase>=2.9.0",
  "python-jose[cryptography]>=3.3.0",
  "biopython>=1.84",
  "slowapi>=0.1.9",
  "python-slugify>=8.0.0",
  "arq>=0.26.0",
  "redis>=5.2.0",
  "dendropy>=5.0.8",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.0",
  "ruff>=0.7.0",
  "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
